<resources>
    <string name="app_name">CoffeeApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="e_mail">e-mail</string>
    <string name="example_example_ru">example@example.ru</string>
    <string name="password">Пароль</string>
    <string name="password_again">Повторите пароль</string>
    <string name="invisible_pass">*****</string>
    <string name="registration">Регистрация</string>
    <string name="enter">Войти</string>
    <string name="on_map">На карте</string>
    <string name="pay">Оплатить</string>
    <string name="order_big_text">Время ожидания заказа 15 минут!\nСпасибо, что выбрали нас!</string>
</resources>