<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.registration.RegistrationFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.44">

            <TextView
                android:id="@+id/textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/e_mail"
                android:textColor="#342D1A"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/inputEmailReg"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/coffee_edittext"
                android:ems="10"
                android:hint='@string/example_example_ru'
                android:inputType="textEmailAddress"
                android:paddingStart="12dp"
                android:textSize="13sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/password"
                android:textColor="#342D1A"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/inputPassReg"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/coffee_edittext"
                android:ems="10"
                android:hint="@string/invisible_pass"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:textSize="13sp"
                tools:ignore="RtlSymmetry" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="15dp"
                android:text="@string/password_again"
                android:textColor="#342D1A"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/inputPassSecondReg"
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/coffee_edittext"
                android:ems="10"
                android:hint="@string/invisible_pass"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:textSize="13sp"
                tools:ignore="RtlSymmetry" />

            <Button
                android:id="@+id/btReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="25dp"
                android:layout_marginEnd="20dp"
                android:backgroundTint="#342D1A"
                android:text="@string/registration"
                android:textSize="13sp"
                app:cornerRadius="25dp" />

        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>